skeplib/tests/fixtures/parser/valid/path_assignment.sk
import io;

fn main() -> Int {
  user.profile.name = "sam";
  io.println("ok");
  return 0;
}
