skeplib/tests/fixtures/parser/invalid/from_import_trailing_comma.sk
from utils.math import add,;

fn main() -> Int {
  return 0;
}
